dnl configure.in for bashlib
dnl ----------------------------------------------------------------------
dnl $Id$
dnl ----------------------------------------------------------------------
dnl bashlib 
dnl Copyright (C) 2002 darren chamberlain <dlc@users.sourceforge.net>
dnl 
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; version 2.
dnl 
dnl This program is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
dnl USA
dnl ----------------------------------------------------------------------

AC_REVISION($Revision$)

dnl bashlib version
AC_SUBST(bashlib_version)dnl
bashlib_version=0.4

AC_INIT(bashlib.in)

AC_PATH_PROG(AWK,     awk,     "")
AC_PATH_PROG(CAT,     cat,     "")
AC_PATH_PROG(CUT,     cut,     "")
AC_PATH_PROG(CP,      cp,      "")
AC_PATH_PROG(ECHO,    echo,    "")
AC_PATH_PROG(ENV,     env,     "")
AC_PATH_PROG(GREP,    grep,    "")
AC_PATH_PROG(GZIP,    gzip,    "")
AC_PATH_PROG(INSTALL, install, "")
AC_PATH_PROG(MKDIR,   mkdir,   "")
AC_PATH_PROG(PRINTF,  printf,  "")
AC_PATH_PROG(RM,      rm,      "")
AC_PATH_PROG(SED,     sed,     "")
AC_PATH_PROG(TAR,     tar,     "")
AC_PATH_PROG(TR,      tr,      "")

AC_OUTPUT(Makefile bashlib)
